# mube

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  build.sh  flake.nix  lockctl.sh  lockctl.test.ts  lockctl.ts  memory.x  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/creating-backlog-tasks/: SKILL.md
.claude/skills/viewer-preview/: SKILL.md
.github/workflows/: ci.yml
backlog/: config.yml
backlog/archive/tasks/: task-2 - resync-lock-state-after-manual-thumbturn.md
backlog/completed/: task-12 - integrate-webui-into-workspace.md  task-13 - share-api-types-webui-firmware.md  task-9 - rustup-toolchain-build-issue.md
backlog/tasks/: task-1 - Firmware power-saving operation.md  task-1 - ファーム-省電力運用の検討.md  task-1-firmware-power-saving-operation.md  task-10-simple-webui.md  task-11-migrate-to-rust-edition-2024.md  task-12-integrate-webui-into-workspace.md  task-13-share-api-types-webui-firmware.md  task-14 - remote-lock-cloudflare-tunnel.md  task-2 - ファーム-手回し操作後の施錠状態の再同期.md  task-3 - サムターンの向き（施錠-解錠）を磁気センサーで取得する.md  task-3-detect-thumbturn-position-with-a-magnetic-sensor.md  task-4-rebuild-circuit-on-universal-board.md  task-5 - servo-mount-boss-tears-off.md  task-6 - top-heavy-mount-peels-off.md  task-7-manual-unlock-clutch-and-exposed-thumbturn.md  task-8-servo-angle-calibration.md  task-9-rustup-toolchain-build-issue.md
circuit/: board.test.tsx  board.tsx  breadboard-auto.ts  breadboard-serve.py  breadboard-serve.ts  breadboard-servo.ts  breadboard-viewer.html  breadboard.sh  check.ts  erc.test.ts  erc.ts  index.tsx  netlist.py  netlist.test.tsx  netlist.tsx  package.json  parts.test.ts  parts.ts  perfboard.ts  placement.test.ts  placement.ts  render-parts.tsx  schematic-layout.ts  wiring-pcb.test.ts  wiring-pcb.ts  wokwi.py
circuit/breadboard/: autolayout.test.ts  autolayout.ts  config.ts  footprints.test.ts  footprints.ts  layout-types.ts  model.ts  place.test.ts  place.ts  render.test.ts  render.ts  route.test.ts  route.ts  servo-layout.ts  servo-nets.ts  servo-verify.test.ts  subcircuit.test.ts  subcircuit.ts  verify.test.ts  verify.ts
circuit/perfboard/: board.test.ts  board.ts  footprints.test.ts  footprints.ts  layout.ts  pico.test.ts  pico.ts  place.test.ts  place.ts  render.test.ts  render.ts  wire.test.ts  wire.ts
crates/firmware/: Cargo.toml  build.rs
crates/firmware/cyw43-firmware/: README.md  fetch.sh
crates/firmware/src/: config.rs  http.rs  main.rs  servo.rs
crates/mube-core/: Cargo.toml
crates/mube-core/src/: lib.rs  lock.rs  servo_math.rs  webapi.rs
crates/mube-firmware/: build.rs
crates/mube-firmware/cyw43-firmware/: README.md
crates/mube-firmware/src/: http.rs
crates/mube-webui/: Cargo.toml
crates/mube-webui/src/: main.rs
crates/smtlk-core/: Cargo.toml
crates/smtlk-core/src/: command.rs  lib.rs  lock.rs  serve.rs  servo_math.rs
crates/webui/: Cargo.toml  Trunk.toml  index.html
crates/webui/src/: main.rs
cyw43-firmware/: README.md
docs/: firmware.md  measurements-checklist.md  parts-selection.md  remote-relay.md
docs/superpowers/plans/: 2026-06-24-pcb-netlist-as-code.md  2026-06-24-smart-lock-enclosure.md  2026-06-24-smart-lock-v2-dimensions.md  2026-06-25-claude-md-setup.md  2026-06-25-parts-selection.md  2026-06-25-servo-pwm-control.md  2026-06-25-tcp-listener.md  2026-06-25-testable-core.md  2026-06-26-servo-screw-mount.md  2026-06-28-issue13-ci.md  2026-06-29-issue16-led-button.md  2026-06-30-bom-update.md  2026-06-30-horn-pocket.md  2026-06-30-mosfet-3v3-gate.md  2026-07-03-servo-ear-mount-coupon.md  2026-07-04-electronics-carrier-tray.md  2026-07-04-tscircuit-sim-mocks.md  2026-07-04-tscircuit-trial.md  2026-07-04-wokwi-breadboard-diagram.md  2026-07-05-circuit-tscircuit-erc-migration.md  2026-07-05-wiring-diagram.md  2026-07-06-breadboard-auto-place-route.md  2026-07-11-perfboard-wiring-diagram.md  2026-07-12-breadboard-tray-enclosure.md  2026-07-15-tray-top-mount.md  2026-07-16-open-baseplate-bolt-on-pedestal.md  2026-07-20-project-reorg.md  2026-07-20-rust-edition-2024-migration.md  2026-07-20-task-10-webui.md  2026-07-21-enclosure-reorg-justfile.md  2026-07-21-fetch-cyw43-bun.md
docs/superpowers/specs/: 2026-06-24-pcb-netlist-as-code-design.md  2026-06-24-smart-lock-enclosure-design.md  2026-06-24-smart-lock-enclosure-v2-dimensions.md  2026-06-25-claude-md-setup-design.md  2026-06-25-parts-selection-design.md  2026-06-25-servo-pwm-control-design.md  2026-06-25-tcp-listener-design.md  2026-06-25-testable-core-design.md  2026-06-26-servo-screw-mount-design.md  2026-06-28-issue13-ci-design.md  2026-06-29-issue16-led-button-design.md  2026-06-29-mosfet-part-number-design.md  2026-06-30-bom-update-design.md  2026-06-30-horn-pocket-design.md  2026-06-30-mosfet-3v3-gate-design.md  2026-06-30-usb-power-5v3a-design.md  2026-07-03-servo-ear-mount-coupon-design.md  2026-07-04-electronics-carrier-tray-design.md  2026-07-04-tscircuit-sim-mocks-design.md  2026-07-04-tscircuit-trial-design.md  2026-07-04-wokwi-breadboard-diagram-design.md  (+16 more)
enclosure/models/: body_test.scad  horn_snap_coupon.scad  pedestal.scad  pilot_gauge.scad  smartlock.scad  socket_test.scad
enclosure/scripts/: build.ts  clash.ts  render.ts
nix/: door-lock-relay.nix
scad/: body.scad  build.ts  clash.ts  clash_check.scad  hardware.scad  hardware_test.scad  horn_snap_coupon.scad  layout_check.scad  lid.scad  mount_plate.scad  openscad.test.ts  openscad.ts  params.scad  params_test.scad  pedestal_test.scad  render.ts  smartlock.scad  smoke.scad  socket.scad  spline_gauge.scad  tray.scad  tray_pilot_gauge.scad
scripts/: fetch-cyw43.test.ts  fetch-cyw43.ts  lockctl.test.ts  lockctl.ts
src/: main.rs  servo.rs
test/: body_test.scad  clash.sh  clash_check.scad  erc.sh  hardware_test.scad  horn_fit_test.scad  lid_test.scad  mount_plate_test.scad  netlist_test.py  params_test.scad  pedestal_test.scad  render.sh  render_png.sh  servo_mount_test.scad  socket_test.scad  wokwi_test.py
tscircuit/: index.tsx  package.json  sim-full.tsx  sim.tsx
viewer/: index.html  serve.py  serve.sh  serve.ts  static.ts  tunnel.ts
