[package]
name = "smtlk-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pico W (RP2040) firmware for the smtlk smart lock — Embassy async + CYW43 WiFi"

# Embassy crates はリリース間隔が短く API も動くため、examples と同じ git 追従にしている。
# 再現性が要るなら branch = "main" を rev = "<commit hash>" に固定すること
# （embassy リポジトリの examples/rp/Cargo.toml の rev に合わせるのが安全）。
[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
cyw43 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
static_cell = "2"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
heapless = "0.8"

# サイズ優先。embedded ではデバッグビルドでも opt-level を上げないと体感が重い。
[profile.dev]
opt-level = "s"
debug = 2
lto = false

[profile.release]
opt-level = "s"
debug = 2
lto = "fat"
codegen-units = 1
