[package]
name = "smtlk-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pico W (RP2040) firmware for the smtlk smart lock — Embassy async + CYW43 WiFi"

# embassy は crates.io 公開版に固定（再現性は版指定＋Cargo.lock で担保）。
# 版を上げる際は各クレートの CHANGELOG と feature 名の変更に注意する。
[dependencies]
smtlk-core = { path = "../smtlk-core", features = ["defmt"] }

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-net = { version = "0.9", features = ["defmt", "tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
cyw43 = { version = "0.7", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
heapless = "0.8"
fixed = "1"
