[package]
name = "mube-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hardware-agnostic lock-control logic for mube (host-testable)"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-io-async = "0.7"

[dev-dependencies]
embassy-futures = "0.1"

[features]
defmt = ["dep:defmt"]
