[package]
name = "mube-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hardware-agnostic lock-control logic for mube (host-testable)"

[dependencies]
defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt"]
