[package]
name = "mube-webui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser WebUI (yew/WASM) for the mube smart lock"

[dependencies]
# API の JSON 契約（LockState / StatusResponse）を firmware と共有する。
mube-core = { path = "../mube-core", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
# API レスポンスの JSON パース。no-alloc・軽量で firmware(no_std) 側とも揃う。
serde-json-core = "0.6"

# wasm-bindgen をシステム提供の wasm-bindgen-cli (0.2.121) に固定する。
# trunk はバージョン不一致時にネット取得を試みて失敗するため、CLI と揃える。
[dependencies.wasm-bindgen]
version = "=0.2.121"

# release プロファイルはワークスペースルートの [profile.wasm-release] で指定し、
# Trunk.toml の cargo_profile が選ぶ。メンバクレート側の [profile] は cargo に
# 無視されるため、ここには書かない。
