[package]
name = "smtlk-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hardware-agnostic lock-control logic for smtlk (host-testable)"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-io-async = "0.6"

[dev-dependencies]
embassy-futures = "0.1"

[features]
defmt = ["dep:defmt"]
