[workspace]

[package]
name = "mube-webui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Browser WebUI (yew/WASM) for the mube smart lock"

[[bin]]
name = "webui"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"

# wasm-bindgen をシステム提供の wasm-bindgen-cli (0.2.121) に固定する。
# trunk はバージョン不一致時にネット取得を試みて失敗するため、CLI と揃える。
[dependencies.wasm-bindgen]
version = "=0.2.121"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
