# 空の [workspace] で「この crate は独立」と宣言する。ルート Cargo.toml が
# exclude していても、開発は git worktree（親リポジトリ配下にネスト）で行うため、
# これが無いと cargo が worktree ルートを越えて親リポの workspace を拾い
# 「believes it's in a workspace when it's not」で trunk build が失敗する。
[workspace]

[package]
name = "webui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Browser WebUI (yew/WASM) for the mube smart lock"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
# API レスポンスの JSON パース。no-alloc・軽量で、将来 firmware(no_std) 側とも共有しやすい。
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

# wasm-bindgen をシステム提供の wasm-bindgen-cli (0.2.121) に固定する。
# trunk はバージョン不一致時にネット取得を試みて失敗するため、CLI と揃える。
[dependencies.wasm-bindgen]
version = "=0.2.121"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
